--- a/clubStyles.css
+++ b/clubStyles.css
@@ -53,8 +53,8 @@ html, body {
 
 .title1{
   color: #EEEEF4;
-  margin-left: 30%;
-  margin-right: 5%;
+  margin-left: 20%;
+  margin-right: 3%;
   font-size: 1.3vw;
   vertical-align: middle;
   height: 0.5vh;
@@ -72,6 +72,7 @@ html, body {
   font-size: 1.3vw;
   border-radius: 5px;
   margin-right: 3%;
+  cursor: pointer;
 }
 
 #login:hover{
@@ -86,6 +87,7 @@ html, body {
   font-size: 1.3vw;
   border-radius: 6%;
   margin-right: 3%;
+  cursor: pointer;
 }
 
 
@@ -387,6 +389,7 @@ a{
     font-size: 2vw;
     border-radius: 6%;
     margin-right: 3%;
+    cursor: pointer;
   }
 
   #signup:hover{
@@ -402,6 +405,7 @@ a{
     font-size: 2vw;
     border-radius: 6%;
     margin-right: 3%;
+    cursor: pointer;
   }
 
 
