--- a/profileStyles.css
+++ b/profileStyles.css
@@ -37,8 +37,8 @@ html, body {
 
 .title1{
   color: #EEEEF4;
-  margin-left: 30%;
-  margin-right: 5%;
+  margin-left: 20%;
+  margin-right: 3%;
   font-size: 1.3vw;
   vertical-align: middle;
   height: 0.5vh;
@@ -56,6 +56,7 @@ html, body {
   font-size: 1.3vw;
   border-radius: 5px;
   margin-right: 3%;
+  cursor: pointer;
 }
 
 #login:hover{
@@ -70,6 +71,7 @@ html, body {
   font-size: 1.3vw;
   border-radius: 6%;
   margin-right: 3%;
+  cursor: pointer;
 }
 
 #profile{
@@ -203,4 +205,44 @@ html, body {
 
 a{
 	text-decoration: none;
+}
+
+
+#mask {
+  position:absolute;
+  left:0;
+  top:0;
+  z-index:9000;
+  background-color:#26262c;
+  display:none;
+}  
+#boxes .window {
+  position:absolute;
+  left:0;
+  top:0;
+  width:440px;
+  height:850px;
+  display:none;
+  z-index:9999;
+  padding:20px;
+  border-radius: 5px;
+  text-align: center;
+}
+#boxes #dialog {
+  width:450px; 
+  height:auto;
+  padding: 10px 10px 10px 10px;
+  background-color:#ffffff;
+  font-size: 15pt;
+}
+
+.agree:hover{
+  background-color: #D1D1D1;
+}
+.popupoption:hover{
+ background-color:#D1D1D1;
+ color: green;
+}
+.popupoption2:hover{
+ color: red;
 }
