--- a/programStyles.css
+++ b/programStyles.css
@@ -54,8 +54,8 @@ html, body {
 
 .title1{
   color: #EEEEF4;
-  margin-left: 30%;
-  margin-right: 5%;
+  margin-left: 20%;
+  margin-right: 3%;
   font-size: 1.3vw;
   vertical-align: middle;
   height: 0.5vh;
@@ -73,6 +73,7 @@ html, body {
   font-size: 1.3vw;
   border-radius: 5px;
   margin-right: 3%;
+  cursor: pointer;
 }
 
 #login:hover{
@@ -87,6 +88,7 @@ html, body {
   font-size: 1.3vw;
   border-radius: 6%;
   margin-right: 3%;
+  cursor: pointer;
 }
 
 
@@ -371,6 +373,7 @@ a{
     font-size: 2vw;
     border-radius: 6%;
     margin-right: 3%;
+    cursor: pointer;
   }
 
   #signup:hover{
@@ -386,6 +389,7 @@ a{
     font-size: 2vw;
     border-radius: 6%;
     margin-right: 3%;
+    cursor: pointer;
   }
 
 
