--- a/satStyles.css
+++ b/satStyles.css
@@ -55,17 +55,17 @@ html, body {
 
 .title1{
   color: #EEEEF4;
-  margin-left: 30%;
-  margin-right: 5%;
+  margin-left: 20%;
+  margin-right: 3%;
   font-size: 1.3vw;
   vertical-align: middle;
   height: 0.5vh;
 }
 
 #login{
-  background-color: #52B788;
+  background-color: #04A777;
   border: solid;
-  border-color: #52B788;
+  border-color: #04A777;
   color: white;
   padding: 1vh 2.5vw;
   text-align: center;
@@ -74,10 +74,11 @@ html, body {
   font-size: 1.3vw;
   border-radius: 5px;
   margin-right: 3%;
+  cursor: pointer;
 }
 
 #login:hover{
-  background-color: #52B788;
+  background-color: #04A777;
   border: solid;
   border-color: white;
   color: white;
@@ -88,6 +89,7 @@ html, body {
   font-size: 1.3vw;
   border-radius: 6%;
   margin-right: 3%;
+  cursor: pointer;
 }
 
 
@@ -461,6 +463,7 @@ p{
     font-size: 2vw;
     border-radius: 6%;
     margin-right: 3%;
+    cursor: pointer;
   }
 
   #signup:hover{
@@ -476,6 +479,7 @@ p{
     font-size: 2vw;
     border-radius: 6%;
     margin-right: 3%;
+    cursor: pointer;
   }
 
 
